--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,35 @@
-@import url('./font.css');
+@import url("./font.css");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-*{
+* {
   margin: 0;
   padding: 0;
 }
 
 body {
   margin: 0;
-  font-family: 'gibsonbold','gibsonbold';
+  font-family: "gibsonbold", "gibsonbold";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: 'gibsonbold',
-    monospace,'DairyMilkFont';
+  font-family: "gibsonbold", monospace, "DairyMilkFont";
 }
 
-#heading{
+#heading {
   font-family: "DairyMilkFont";
+}
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
 }
